cmake_minimum_required(VERSION 2.8.3)
project(frc-visioncv)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -Wall -Werror -pedantic -pthread")
find_package(OpenCV REQUIRED)
include_directories(/usr/local/include/networktables)
add_executable(particles particle.cpp main.cpp)
target_link_libraries(particles ${OpenCV_LIBS} networktables_static)